Applied basic css formating

--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -3,4 +3,79 @@
   border-radius: 4px;
   padding: 5px;
   width: 450px;
+  cursor:pointer;
+}
+
+.displayImg {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 450px;
+}
+
+.myButton {
+	box-shadow:inset 0px 1px 3px 0px #91b8b3;
+	background:linear-gradient(to bottom, #768d87 5%, #6c7c7c 100%);
+	background-color:#768d87;
+	border-radius:5px;
+	border:1px solid #566963;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:11px 23px;
+	text-decoration:none;
+	text-shadow:0px -1px 0px #2b665e;
+}
+.myButton:hover {
+	background:linear-gradient(to bottom, #6c7c7c 5%, #768d87 100%);
+	background-color:#6c7c7c;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
+
+.centered {
+  position: fixed;
+  top: 45%;
+  left: 48%;
+}
+
+.centeredBattle {
+  position: fixed;
+  top: 30%;
+  left: 30%;
+}
+
+.centeredScoreboard {
+  position: absolute;
+  top: 10%;
+  left: 39%;
+}
+
+.header {
+  font-style: italic;
+  font-size: 45px;
+  text-shadow: 1px 1px 10px grey;
+  margin: 0;
+  margin-bottom: 4rem;
+  padding:0;
+  background-color: lightblue;
+}
+
+.table {
+  color: white;
+}
+
+.tableHeader {
+  font-size: 25px;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
+}
+
+.tableData {
+  font-size: 25px;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
