--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -39,7 +39,7 @@
 }
 
 .centered {
-  position: fixed;
+  position: absolute;
   top: 45%;
   left: 48%;
 }
@@ -78,4 +78,10 @@
 .tableData {
   font-size: 25px;
   font-family: "Comic Sans MS", "Comic Sans", cursive;
+}
+
+.previousText {
+  font-size: 20px;
+  color: white;
+  cursor:pointer;
 }
