--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -98,6 +98,12 @@
   left: 39%;
 }
 
+.centeredHistoricalRankings {
+  position: absolute;
+  top: 20%;
+  left: 35%;
+}
+
 .header {
   font-style: italic;
   font-size: 45px;
